[package]
name = "wordle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
ordinal = "0.3.2"
pancurses = "0.17.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"] }
